--- a/app/src/main/res/layout/fragment_option_selection.xml
+++ b/app/src/main/res/layout/fragment_option_selection.xml
@@ -2,29 +2,44 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/opaque_bg_color"
     tools:context=".feed.views.OptionsFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/option_rv"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/menu_grid_item_image_width_new"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/dimen_24"
+        android:background="@drawable/qd_grey_white_rounded_gradient"
+        android:paddingVertical="@dimen/qd_margin_40"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimen_40"
-        android:id="@+id/find_btn"
-        android:text="Find"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/option_rv" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/option_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dimen_40"
+            app:layout_constraintBottom_toTopOf="@id/find_btn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:itemCount="3"
+            tools:listitem="@layout/spinner_item" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/find_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:background="@drawable/circle_bg"
+            android:text="@string/find"
+            android:textColor="@color/sushi_white"
+            app:layout_constraintBottom_toBottomOf="@+id/option_rv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
