--- a/app/src/main/res/layout/fragment_pdf_list.xml
+++ b/app/src/main/res/layout/fragment_pdf_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/sushi_white"
     tools:context=".feed.views.FeedFragment">
     <TextView
         android:id="@+id/heading"
@@ -27,7 +28,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/heading"/>
-
 
     <FrameLayout
         android:id="@+id/progressBar"
